k8s/pingfederate/cluster-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
  name: pf-cluster
  labels:
    app: pingfederate
spec:
  publishNotReadyAddresses: true
  clusterIP: None
  ports:
    - name: bind-port
      port: 7600
      protocol: TCP
      targetPort: 7600
  selector:
     app: pingfederate
