k8s/pingfederate/output.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pingfederate
    tier: engine
  name: pingfederate
  namespace: anydevops
spec:
  ports:
  - port: 443
    protocol: TCP
    targetPort: 9031
  selector:
    app: pingfederate
    tier: engine
  sessionAffinity: None
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
  labels:
    app: pingfederate
  name: pf-cluster
spec:
  clusterIP: None
  ports:
  - name: bind-port
    port: 7600
    protocol: TCP
    targetPort: 7600
  publishNotReadyAddresses: true
  selector:
    app: pingfederate
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pingfederate
    tier: admin
  name: pingfederate-admin
spec:
  ports:
  - port: 9999
    protocol: TCP
  selector:
    app: pingfederate
    tier: admin
  sessionAffinity: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: pingfederate
    tier: engine
  name: pingfederate
spec:
  replicas: 3
  selector:
    matchLabels:
      app: pingfederate
      tier: engine
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: pingfederate
        tier: engine
        version: "0.1"
    spec:
      containers:
      - env:
        - name: SERVER_PROFILE_ANYDEVOPS_BRANCH
          value: v1
        - name: OPERATIONAL_MODE
          value: CLUSTERED_CONSOLE
        - name: PF_ENGINE_PUBLIC_HOSTNAME
          value: sg-dev.pingfederate.anydevops.com
        - name: PF_ADMIN_PUBLIC_HOSTNAME
          value: sg-dev.pingfederate-admin.anydevops.com
        - name: PF_ENGINE_PUBLIC_PORT
          value: "443"
        image: pingidentity/pingfederate:10.0.0
        lifecycle:
          preStop:
            exec:
              command:
              - /bin/sh
              - -c
              - sleep 20
        livenessProbe:
          failureThreshold: 1
          httpGet:
            path: /pf/heartbeat.ping
            port: 9031
            scheme: HTTPS
          initialDelaySeconds: 150
          periodSeconds: 1
        name: pingfederate
        ports:
        - containerPort: 9031
          name: runtime
        readinessProbe:
          httpGet:
            path: /pf/heartbeat.ping
            port: 9031
            scheme: HTTPS
          periodSeconds: 10
        resources:
          limits:
            cpu: "2"
            memory: 2.5Gi
          requests:
            cpu: "2"
            memory: 2.5Gi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: pingfederate
    tier: admin
  name: pingfederate-admin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pingfederate
      tier: admin
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: pingfederate
        tier: admin
    spec:
      containers:
      - env:
        - name: SERVER_PROFILE_ANYDEVOPS_BRANCH
          value: v1
        - name: OPERATIONAL_MODE
          value: CLUSTERED_CONSOLE
        - name: PF_ENGINE_PUBLIC_HOSTNAME
          value: sg-dev.pingfederate.anydevops.com
        - name: PF_ADMIN_PUBLIC_HOSTNAME
          value: sg-dev.pingfederate-admin.anydevops.com
        - name: PF_ENGINE_PUBLIC_PORT
          value: "443"
        image: pingidentity/pingfederate:10.0.0-alpine-edge
        name: console-node
        ports:
        - containerPort: 9999
        - containerPort: 7600
        resources:
          limits:
            cpu: "2"
            memory: 2.5Gi
          requests:
            cpu: "2"
            memory: 2.5Gi
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx-public
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
  labels:
    app: pingfederate
    tier: engine
  name: pingfederate
  namespace: anydevops
spec:
  rules:
  - host: sg-dev.pingfederate.anydevops.com
    http:
      paths:
      - backend:
          serviceName: pingfederate
          servicePort: 443
        path: /
  tls:
  - hosts:
    - sg-dev.pingfederate.anydevops.com
    secretName: anydevops-tls-secret
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx-public
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
  labels:
    app: pingfederate
    tier: admin
  name: pingfederate-admin
spec:
  rules:
  - host: sg-dev.pingfederate-admin.anydevops.com
    http:
      paths:
      - backend:
          serviceName: pingfederate-admin
          servicePort: 9999
        path: /pingfederate
      - backend:
          serviceName: pingfederate-admin
          servicePort: 9999
        path: /pf-admin-api
  tls:
  - hosts:
    - sg-dev.pingfederate-admin.anydevops.com
    secretName: anydevops-tls-secret
